--- a/src/main/webapp/menu/menu.html
+++ b/src/main/webapp/menu/menu.html
@@ -5,6 +5,11 @@
         <title>Menú</title>
     </head>
     <body>
+        <ol class="breadcrumb">
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Pizza</a></li>
+            <li class="active">Data</li>
+        </ol>
         <h3>Elige tu pizza ideal</h3>
         <div class="table-responsive">
             <table class="table table-striped table-hover table-condensed example-animate-container">
