agregada vista y estilos en menu, tambien estilos en login

--- a/src/main/webapp/menu/menu.html
+++ b/src/main/webapp/menu/menu.html
@@ -11,19 +11,7 @@
             <li class="active">Data</li>
         </ol>
         <h3>Elige tu pizza ideal</h3>
-        <div class="table-responsive">
-            <table class="table table-striped table-hover table-condensed example-animate-container">
-                <tbody>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Precio</th>
-                </tr>
-                <tr data-ng-repeat="promo in promos" class="animate-repeat">
-                    <td class="col-xs-1">{{promo.nombre}}</td>
-                    <td class="col-xs-5">{{promo.precio}}</td>
-                </tr>
-                </tbody>
-            </table>
+        <div promos data-ng-repeat="promo in promos" class="animate-repeat">
         </div>
     </body>
 </html>
