--- a/src/main/webapp/login/login.html
+++ b/src/main/webapp/login/login.html
@@ -8,7 +8,9 @@
 
     <div class="row">
         <div class="col-md-4">
-            <h3>Iniciar sesión</h3>
+            <div class="panel panel-primary ">
+            <div class="panel-heading">Iniciar sesión</div>
+            <div class="panel-body">
 
             <div class="form-horizontal">
                 <div class="form-group">
@@ -42,12 +44,16 @@
             <div class="alert alert-danger alert-dismissible" role="alert" ng-show="loginError.message">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 {{loginError.message}}</div>
+            </div>
+            </div>
         </div>
 
         <div class="col-md-8">
-            <h3>Registrarse</h3>
+            <div class="panel panel-primary ">
+                <div class="panel-heading">Registrarse</div>
+                <div class="panel-body">
 
-            <form class="form-horizontal">
+                <form class="form-horizontal">
                 <div class="form-group">
                     <label for="inputUser2" class="col-sm-3 control-label">Usuario</label>
                     <div class="col-sm-9">
@@ -98,7 +104,7 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 {{signupError.message}}</div>
         </div>
+    </div></div>
     </div>
-
 </body>
 </html>
