agregadas pantallas tamanio, extras, estilos en precios y botones flechas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,8 @@
 
     <a ui-sref="login" ui-sref-active="active">Login</a>
     <a ui-sref="menu" ui-sref-active="active">Menu</a>
-
+    <a ui-sref="tamanio" ui-sref-active="active">Tamaño</a>
+    <a ui-sref="extras" ui-sref-active="active">Extras</a>
 
     <ui-view>
 
@@ -53,6 +54,7 @@
 <script src="menu/menu.js"></script>
 <script src="tamanio/tamanio.js"></script>
 <script src="pedido/pedido.js"></script>
+<script src="extras/extras.js"></script>
 
 </body>
 </html>
