--- a/src/main/webapp/tamanio/tamanio.html
+++ b/src/main/webapp/tamanio/tamanio.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Tamaño</title>
+    </head>
+    <body>
 
-</body>
+    <h2>Tamaño</h2>
+        <div tamanios data-ng-repeat="tamanio in tamanios" class="animate-repeat">
+        </div>
+    </body>
 </html>
