--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>TP Domino's Pizza</title>
     <link rel="stylesheet" href="css/app.css"/>
+    <link href="webapp/estilos.css" rel="stylesheet">
 
     <!-- JQUERY -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -27,9 +28,10 @@
 
 <div class="container">
     <div class="page-header">
-        <h1>
+      <!--  <h1><span class="Images/dominos_logo.jpg"></span>
             Domino's
             <small>AngularJS</small>
+
         </h1>
     </div>
 
@@ -37,13 +39,79 @@
     <a ui-sref="menu" ui-sref-active="active">Menu</a>
     <a ui-sref="tamanio" ui-sref-active="active">Tamaño</a>
     <a ui-sref="extras" ui-sref-active="active">Extras</a>
+-->
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Domino's</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a ui-sref="menu"ui-sref-active="active">Menu</a></li>
+          <li><a ui-sref="tamnio" ui-sref-active="active">Tamaño</a></li>
+          <li><a ui-sref="extras" ui-sref-active="active">Extras</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a ui-shref="login"ui-sref-active="active">
+              <span class="glyphicon glyphicon-user">
+              </span> Registrate</a></li>
+          <li><a ui-shref="login"ui-sref-active="active">
+            <span class="glyphicon glyphicon-log-in">
+            </span> Login</a></li>
+        </ul>
+      </div>
+    </nav>
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+      <div class="carousel-inner">
+
+      <div class="item active">
+        <img src="Images/dosPorUno.jpg" alt="dosPorUno" style="width:100%;">
+        <div class="carousel-caption">
+          <p>Aprovecha la promo!</p>
+
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="Images/resgistro.jpg" alt="Registro" style="width:100%;">
+        <div class="carousel-caption">
+          <p>Registrate y obtene importantes descuentos!</p>
+
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="Images/compromiso.gif" alt="compromiso" style="width:100%;">
+        <div class="carousel-caption">
+          <p>Si venis y tu pizza no esta lista, te la regalamos!</p>
+        </div>
+      </div>
+    </div>
+
+
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+</div>
 
     <ui-view>
 
     </ui-view>
 
 </div>
-
 <!-- nuestro jscript -->
 <script src="js/models.js"></script>
 <script src="js/app.js"></script>
@@ -56,6 +124,17 @@
 <script src="pedido/pedido.js"></script>
 <script src="extras/extras.js"></script>
 
+<footer class="sites-footer">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
+
+  <div class="container text-center">
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-google-plus"></i></a>
+    <a href="#"><i class="fa fa-skype"></i></a>
+  </div>
+</footer>
+
 </body>
 </html>
-
