fixeado bug en radio buttons y agregadas varias cosas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,9 @@
             Domino's
             <small>AngularJS</small>
         </h1>
+
+        <h3><span class="label label-default">{{cliente.nick}}</span></h3>
+
     </div>
 
     <a ui-sref="login" ui-sref-active="active">Login</a>
