--- a/src/main/webapp/extras/extras.html
+++ b/src/main/webapp/extras/extras.html
@@ -5,8 +5,19 @@
     <title>Extras</title>
 </head>
 <body>
+    <h2>{{promoSeleccionada.nombre}}<small> {{tamanioSeleccionado.nombre}}</small></h2>
+    <span class="badge">{{ingrediente.precio}}</span>
+
     <div class="row">
-        <div class="panel panel-success ">
+        <div class="col-md-8">
+            <div ingredientes data-ng-repeat="ingrediente in promoSeleccionada.ingredientes" class="animate-repeat">
+
+            </div>
+            <div ingredientes data-ng-repeat="ingrediente in extrasSeleccionados" class="animate-repeat">
+
+            </div>
+        </div>
+        <div class="panel panel-success col-md-4">
             <div class="panel-heading">Extras</div>
             <div class="panel-body">
                 <div extras data-ng-repeat="extra in extras" class="animate-repeat">
