directivas nesteadas arregladas

--- a/src/main/webapp/extras/extras.html
+++ b/src/main/webapp/extras/extras.html
@@ -10,12 +10,12 @@
 
     <div class="row">
         <div class="col-md-8">
-            <div ingredientes data-ng-repeat="ingrediente in promoSeleccionada.ingredientes" class="animate-repeat">
+            <ingredientes data-ng-repeat="ingrediente in promoSeleccionada.ingredientes" class="animate-repeat">
 
-            </div>
-            <div ingredientes data-ng-repeat="ingrediente in extrasSeleccionados" class="animate-repeat">
+            </ingredientes>
+            <ingredientes data-ng-repeat="ingrediente in extrasSeleccionados" class="animate-repeat">
 
-            </div>
+            </ingredientes>
         </div>
         <div class="panel panel-success col-md-4">
             <div class="panel-heading">Extras</div>
