--- a/src/main/webapp/extras/extras.html
+++ b/src/main/webapp/extras/extras.html
@@ -5,8 +5,8 @@
     <title>Extras</title>
 </head>
 <body>
-    <h2>{{promoSeleccionada.nombre}}<small> {{tamanioSeleccionado.nombre}}</small></h2>
-    <span class="badge">{{ingrediente.precio}}</span>
+    <h2>{{promoSeleccionada.nombre}}<small> {{tamanioSeleccionado.nombre}}</small>
+        <span class="badge">{{subtotal()}}</span></h2>
 
     <div class="row">
         <div class="col-md-8">
