--- a/src/main/webapp/extras/extras.html
+++ b/src/main/webapp/extras/extras.html
@@ -5,15 +5,20 @@
     <title>Extras</title>
 </head>
 <body>
-    <h2>{{promoSeleccionada.nombre}}<small> {{tamanioSeleccionado.nombre}}</small>
-        <span class="badge">{{subtotal()}}</span></h2>
+<ol class="breadcrumb">
+    <li>Tamaño</li>
+    <li>Ingredientes</li>
+</ol>
+
+    <h2>{{plato.promo.nombre}}<small> {{plato.tamanio.nombre}}</small>
+        <span class="badge">{{plato.precio()}}</span></h2>
 
     <div class="row">
         <div class="col-md-8">
-            <ingredientes data-ng-repeat="ingrediente in promoSeleccionada.ingredientes" class="animate-repeat">
+            <ingredientes data-ng-repeat="ingrediente in plato.promo.ingredientes" class="animate-repeat">
 
             </ingredientes>
-            <ingredientes data-ng-repeat="ingrediente in extrasSeleccionados" class="animate-repeat">
+            <ingredientes data-ng-repeat="ingrediente in plato.extras" class="animate-repeat">
 
             </ingredientes>
         </div>
