--- a/src/main/webapp/menu/promoTemplate.html
+++ b/src/main/webapp/menu/promoTemplate.html
@@ -1,8 +1,8 @@
 <div class="list-group" >
-    <a href="#" ng-class="promoSeleccionada == promo ? 'list-group-item active' : 'list-group-item' ">
-        <h4 class="list-group-item-heading">{{promo.nombre}}</h4>
-        <p class="list-group-item-text">{{promo.ingredientesAsString()}}</p>
-        <span class="badge">{{promo.precio}}</span>
+    <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">{{plato.promo.nombre}}</h4>
+        <p class="list-group-item-text">{{plato.ingredientesAsString()}}</p>
+        <span class="badge">{{plato.precio()}}</span>
         <button type="button" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
