pizza custom y listado de pizzas en pedido

--- a/src/main/webapp/pedido/pedido.html
+++ b/src/main/webapp/pedido/pedido.html
@@ -6,14 +6,17 @@
 </head>
 <body>
 
-<ol class="breadcrumb">
-    <li>Tamaño</li>
-    <li>Ingredientes</li>
-    <li>Confirmar</li>
-</ol>
+    <ol class="breadcrumb">
+        <li>Tamaño</li>
+        <li>Ingredientes</li>
+        <li>Confirmar</li>
+    </ol>
     <h2>Pedido</h2>
     <h3>Pizzas</h3>
-    <div promos data-ng-repeat="plato in pedido.platos" ng-click="selectPromo(plato)" class="animate-repeat">
+    <div promos data-ng-repeat="plato in pedido.platos" ng-click="selectPromo(plato)" class="animate-repeat"></div>
+    <div>
+        <a ui-sref="menu" ui-sref-active="active">
+            <p><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Agregar otra pizza</p></a></div>
 
     <h3>Aclaraciones</h3>
     <textarea class="form-control" rows="3"></textarea>
@@ -22,10 +25,10 @@
 
     <label><input type="radio" name="envio" value="envio"> Retiro por el local</label>
     <label><input type="radio" name="envio" value="envio"> Envio</label>
-    <span class="badge">{{total()}}</span>
+    <span class="badge">{{envio()}}</span>
     <input type="text" class="form-control" id="exampleInputName2" placeholder="Direccion">
 
-    <h2>Total a pagar:</h2>     <span class="badge">{{total()}}</span>
+    <h2>Total a pagar:</h2>     <span class="badge">{{pedido.total()}}</span>
 
 
     <button type="button" class="btn btn-info pull-right" ng-click="continuar()">Confirmar pedido</button>
