--- a/src/main/webapp/menu/promoTemplate.html
+++ b/src/main/webapp/menu/promoTemplate.html
@@ -2,6 +2,7 @@
     <a href="#" class="list-group-item">
         <h4 class="list-group-item-heading">{{plato.promo.nombre}}</h4>
         <p class="list-group-item-text">{{plato.ingredientesAsString()}}</p>
+        <p ng-show="plato.promo.descripcion && plato.extras.length==0" class="list-group-item-text">{{plato.promo.descripcion}}</p>
         <span class="badge">{{plato.precio()}}</span>
         <button type="button" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
