--- a/src/main/webapp/pedido/pedido.html
+++ b/src/main/webapp/pedido/pedido.html
@@ -11,28 +11,39 @@
         <li>Ingredientes</li>
         <li>Confirmar</li>
     </ol>
-    <h2>Pedido</h2>
-    <h3>Pizzas</h3>
-    <div promos data-ng-repeat="plato in pedido.platos" ng-click="selectPromo(plato)" class="animate-repeat"></div>
-    <div>
-        <a ui-sref="menu" ui-sref-active="active">
-            <p><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Agregar otra pizza</p></a></div>
 
-    <h3>Aclaraciones</h3>
-    <textarea class="form-control" rows="3" ng-model="pedido.aclaraciones" ></textarea>
+    <div class="container-fluid">
+        <h2>Pedido</h2>
+        <h3>Pizzas</h3>
+        <div promos data-ng-repeat="plato in pedido.platos" ng-click="selectPromo(plato)" class="animate-repeat"></div>
+        <div>
+            <a ui-sref="menu" ui-sref-active="active">
+                <p><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Agregar otra pizza</p></a></div>
 
-    <h3>Envio</h3>
-    <form>
-        <label><input checked type="radio" name="envio" value="retiraPorLocal" ng-click="pedido.retiraPorLocal()"> Retiro por el local</label>
-        <br/>
-        <label><input type="radio" name="envio" value="delivery" ng-click="pedido.conEnvio(direccion)"> Envio</label>
-        <span class="badge">15</span>
-        <input type="text" class="form-control" ng-model="direccion" placeholder="Direccion">
-    </form>
-    <h2>Total a pagar:</h2>     <span class="badge">{{pedido.total()}}</span>
+        <h3>Aclaraciones</h3>
+        <textarea class="form-control" rows="3" ng-model="pedido.aclaraciones" ></textarea>
 
+        <h3>Envio</h3>
+        <form>
+            <label><input checked type="radio" name="envio" value="retiraPorLocal" ng-click="pedido.retiraPorLocal()"> Retiro por el local</label>
+            <br/>
+            <label><input type="radio" name="envio" value="delivery" ng-click="pedido.conEnvio(direccion)"> Envio</label>
+            <span class="badge">15</span>
+            <input type="text" class="form-control" ng-model="direccion" placeholder="Direccion">
+        </form>
 
-    <button type="button" class="btn btn-info pull-right" ng-click="confirmarPedido()">Confirmar pedido</button>
+        <div class="row">
+            <div class="col-md-9">
+                <h2>Total a pagar:</h2>
+            </div>
+            <div class="col-md-2">
+                <span class="badge">{{pedido.total()}}</span>
+            </div>
+            <div class="col-md-1">
+                <button type="button" class="btn btn-info pull-right" ng-click="confirmarPedido()">Confirmar pedido</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
