--- a/src/main/webapp/usuario/usuario.html
+++ b/src/main/webapp/usuario/usuario.html
@@ -2,9 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Usuario</title>
 </head>
 <body>
+    <h2>Usuario</h2>
+    <div class="form-horizontal">
+        <div class="form-group">
+            <label for="inputUser" class="col-sm-4 control-label">Nombre</label>
+            <div class="col-sm-8">
+                <input ng-model="loginRequest.username" class="form-control" id="inputUser" placeholder="Nombre">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="col-sm-4 control-label">Email</label>
+            <div class="col-sm-8">
+                <input ng-model="loginRequest.password" type="password" class="form-control" id="inputPassword" placeholder="Email">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="col-sm-4 control-label">Direccion</label>
+            <div class="col-sm-8">
+                <input ng-model="loginRequest.password" type="password" class="form-control" id="inputPassword" placeholder="Email">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-8">
+                <button type="submit" class="btn btn-default" ng-click="login()">Guardar</button>
+            </div>
+        </div>
+    </div>
+    <h3>Pedidos anteriores</h3>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Pizzas</th>
+                <th>Direccion</th>
+                <th>Monto</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody >
+            <tr ng-repeat="pedido in pedidos">
+                <td>{{pedido.platos.pizza}}</td>
+                <td>{{usuario.direccion}}</td>
+                <td>{{pedido.costo}}</td>
+                <td><a href="#">Repetir</a></td>
+            </tr>
+        </tbody>
+    </table>
+    <div>
+
+    </div>
+
 
 </body>
 </html>
