--- a/src/main/webapp/tamanio/tamanio.html
+++ b/src/main/webapp/tamanio/tamanio.html
@@ -10,7 +10,7 @@
         <li>Tamaño</li>
     </ol>
 
-    <h2>{{plato.promo.nombre}}</h2>
+    <h2>{{plato.pizza.nombre}}</h2>
         <div tamanios data-ng-repeat="tamanio in tamanios" ng-click="selectTamanio(tamanio)" class="animate-repeat">
         </div>
     </body>
