--- a/src/main/webapp/usuario/usuario.html
+++ b/src/main/webapp/usuario/usuario.html
@@ -8,27 +8,27 @@
     <h2>Usuario</h2>
     <div class="form-horizontal">
         <div class="form-group">
-            <label for="inputUser" class="col-sm-4 control-label">Nombre</label>
-            <div class="col-sm-8">
-                <input ng-model="loginRequest.username" class="form-control" id="inputUser" placeholder="Nombre">
+            <label for="nombre" class="col-sm-4 control-label">Nombre</label>
+            <div class="col-sm-4">
+                <input ng-model="cliente.nombre" id="nombre" class="form-control">
             </div>
         </div>
         <div class="form-group">
-            <label for="inputPassword" class="col-sm-4 control-label">Email</label>
-            <div class="col-sm-8">
-                <input ng-model="loginRequest.password" type="password" class="form-control" id="inputPassword" placeholder="Email">
+            <label for="email" class="col-sm-4 control-label">Email</label>
+            <div class="col-sm-4">
+                <input ng-model="cliente.email" id="email" class="form-control">
             </div>
         </div>
         <div class="form-group">
-            <label for="inputPassword" class="col-sm-4 control-label">Direccion</label>
-            <div class="col-sm-8">
-                <input ng-model="loginRequest.password" type="password" class="form-control" id="inputPassword" placeholder="Email">
+            <label for="direccion" class="col-sm-4 control-label">Direccion</label>
+            <div class="col-sm-4">
+                <input ng-model="cliente.direccion" id="direccion" class="form-control">
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-8">
-                <button type="submit" class="btn btn-default" ng-click="login()">Guardar</button>
+                <button type="submit" class="btn btn-default" ng-click="editarUsuario()">Guardar</button>
             </div>
         </div>
     </div>
@@ -43,10 +43,10 @@
             </tr>
         </thead>
         <tbody >
-            <tr ng-repeat="pedido in pedidos">
-                <td>{{pedido.platos.pizza}}</td>
-                <td>{{usuario.direccion}}</td>
-                <td>{{pedido.costo}}</td>
+            <tr data-ng-repeat="pedido in historial">
+                <td>{{pedido.platos | joinStringList:'pizza'}}</td>
+                <td>{{pedido.formaDeEnvio.direccion}}</td>
+                <td>{{pedido.monto}}</td>
                 <td><a href="#">Repetir</a></td>
             </tr>
         </tbody>
