--- a/src/main/webapp/login/login.html
+++ b/src/main/webapp/login/login.html
@@ -96,7 +96,7 @@
                 <div class="form-group">
                     <div class="col-sm-offset-3 col-sm-9">
                         <button type="submit" class="btn btn-default" ng-click="signup()">Registrarse</button>
-                        <span>O ingresar como INVITADO</span>
+                        <a ng-click="loginAsInvitado()" ui-sref-active="active"><span>O ingresar como INVITADO</span></a>
                     </div>
                 </div>
             </form>
