--- a/src/main/webapp/pedido/pedido.html
+++ b/src/main/webapp/pedido/pedido.html
@@ -33,13 +33,13 @@
         </form>
 
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-3">
                 <h2>Total a pagar:</h2>
             </div>
-            <div class="col-md-2">
-                <span class="badge dinero">{{pedido.total()}}</span>
+            <div class="col-md-1 centrar-div">
+                <span class="badge dinero large">{{pedido.total()}}</span>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-2 centrar-div">
                 <button type="button" class="btn btn-info pull-right" ng-click="confirmarPedido()">Confirmar pedido</button>
             </div>
         </div>
