--- a/src/main/webapp/usuario/usuario.html
+++ b/src/main/webapp/usuario/usuario.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h2>Usuario</h2>
+
+    <div class="alert alert-danger alert-dismissible" role="alert" ng-show="error.message">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {{error.message}}</div>
+    
     <div class="form-horizontal">
         <div class="form-group">
             <label for="nombre" class="col-sm-4 control-label">Nombre</label>
@@ -29,6 +34,8 @@
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-8">
                 <button type="submit" class="btn btn-default" ng-click="editarUsuario()">Guardar</button>
+
+
             </div>
         </div>
     </div>
